# funcvec

./: .gitignore  Cargo.toml  README.md
crates/funcvec-cli/: Cargo.toml  README.md
crates/funcvec-cli/src/: lib.rs
crates/funcvec-cli/tests/: cli.rs
crates/funcvec-core/: Cargo.toml  README.md
crates/funcvec-core/src/: cache.rs  discover.rs  embeddings.rs  extract.rs  lib.rs  lsp_client.rs  models.rs  normalize.rs  report.rs  score.rs
crates/funcvec-core/tests/: dupe_lab.rs
fixtures/dupe_lab/: Cargo.toml
fixtures/dupe_lab/src/: lib.rs
