[workspace]
resolver = "2"
members = [
    "crates/funcvec-core",
    "crates/funcvec-cli",
]
exclude = [
    "fixtures/dupe_lab",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/sssemil/funcvec"
homepage = "https://github.com/sssemil/funcvec"

[workspace.dependencies]
anyhow = "1.0"
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
fastembed = { version = "5.17.2", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
hex = "0.4"
lsp-types = "0.97"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.23"
url = "2.5"
walkdir = "2.5"
